Solved blinking bar issue, slightly changed animations and styles and added simple background

--- a/bio.html
+++ b/bio.html
@@ -38,13 +38,11 @@
 
 <div class="mainPanelBio" id="bioText">
     <h3>About me</h3>
-    <p>I'm Raúl Núñez García, a computer engineer student from the University of Oviedo. My interests range
+    <p>Hello there, I'm Raúl Núñez García, a computer engineer student from the University of Oviedo. My interests range
         from web technologies to AI and its applications, and you can find some of my projects <a id="proyectsLink"
                                                                                                   href="https://www.github.com/raulng9">here.</a>
     </p>
-    <p>In my free time I like to practice sports, shoot photos and read. In case it serves anyone, here are some of my
-        online profiles about
-        those hobbies,</p>
+    <p>In my free time I like to practice sports (cycling, swimming, you name it), take photos and read among other things.</p>
 </div>
 <script src="Scripts/jquery.js"></script>
 <script type="text/javascript" src="Scripts/contactScript.js"></script>
