--- a/bio.html
+++ b/bio.html
@@ -48,4 +48,7 @@
 <script type="text/javascript" src="Scripts/contactScript.js"></script>
 <script type="text/javascript" src="Scripts/bioScript.js"></script>
 </body>
+<footer>
+    <p>Luarca, 2021</p>
+</footer>
 </html>
